--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,11 @@
-#synchronizedLog:
-#  - user_info
+synchronizedLog:
+  - user_info
 
-synchronizedReal:
-  user_info:
-    - name
-    - name_age
+#synchronizedReal:
+#  user_info:
+#    - name
+#    - name_age
 
 date:
-  - 2020-11-17 00:00:00
-  - 2020-11-18 23:00:00
+  - 1991-01-17 00:00:00
+  - 2020-12-18 23:00:00
