--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,8 @@
+#源数据库
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/sync-src?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&useSSL=false
-jdbc.username=root
-jdbc.password=root
+jdbc.url=jdbc:mysql://116.228.75.54:9901/qpcmms?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&useSSL=false
+jdbc.username=sa
+jdbc.password=Sa@1234567890
 jdbc.validation.query=SELECT 2
 
 jdbc.pool.init=1
@@ -10,13 +11,33 @@ jdbc.pool.maxActive=50
 
 
 
-
+#目标数据库
 jdbc2.driver=com.mysql.jdbc.Driver
-jdbc2.url=jdbc:mysql://localhost:3306/sync-dest?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&useSSL=false
-jdbc2.username=root
-jdbc2.password=root
+jdbc2.url=jdbc:mysql://58.40.21.193:33061/qpcmms?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&useSSL=false
+jdbc2.username=gxjh1
+jdbc2.password=gxjh1
 jdbc2.validation.query=SELECT 2
 
 jdbc2.pool.init=1
 jdbc2.pool.minIdle=3
 jdbc2.pool.maxActive=50
+
+#jdbc2.driver=com.mysql.jdbc.Driver
+#jdbc2.url=jdbc:mysql://localhost:3306/qpcmms?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&useSSL=false
+#jdbc2.username=root
+#jdbc2.password=root
+#jdbc2.validation.query=SELECT 2
+#
+#jdbc2.pool.init=1
+#jdbc2.pool.minIdle=3
+#jdbc2.pool.maxActive=50
+
+#jdbc2.driver=com.mysql.jdbc.Driver
+#jdbc2.url=jdbc:mysql://localhost:3306/sync-dest?useUnicode=true&characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&useSSL=false
+#jdbc2.username=root
+#jdbc2.password=root
+#jdbc2.validation.query=SELECT 2
+#
+#jdbc2.pool.init=1
+#jdbc2.pool.minIdle=3
+#jdbc2.pool.maxActive=50
